finished the cafe menu build

--- a/CafeMenu/CafeMenu.html
+++ b/CafeMenu/CafeMenu.html
@@ -16,11 +16,12 @@
 
     <main>
         <h1>CAMPER CAFE</h1>
-        <p>Est. 2020</p>
+        <p class="established">Est. 2020</p><hr>
 
         <!-- This section is for the coffee -->
         <section>
             <h2>Coffee</h2>
+            <img src=https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg alt="coffee icon"/>
 
             <!-- articles often contain multiple items that have related info -->
             <article class="item">
@@ -41,9 +42,35 @@
         </section>
 
         <!-- this section is for the dessert -->
-        <section></section>
+        <section>
+            <h2>Desserts</h2>
+            <img src=https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg alt="pie icon"/>
 
-    </main>
+            <article class="item">
+                <p class="dessert">Donut</p><p class="price">1.50</p>
+            </article>
+            <article class="item">
+                <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+            </article>
+            <article class="item">
+                <p class="dessert">cheesecake</p><p class="price">3.00</p>
+            </article>
+            <article class="item">
+                <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+            </article>
+            
+        </section>
+
+    </main><hr class="bottom-line">
+
+    <footer>
+        <p>
+            <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+        </p>
+        <p class="address">
+            123 Free Code Camp Drive
+        </p>
+    </footer>
     
 </body>
 </html>
