working on the marker project

--- a/ColoredMarkers/index.html
+++ b/ColoredMarkers/index.html
@@ -12,9 +12,22 @@
 
     <div class="container">
 
-        <div class="marker red"></div>
-        <div class="marker green"></div>
-        <div class="marker blue"></div>
+        <div class="marker red">
+            <div class="cap">
+
+            </div>
+            <div class="sleeve">
+
+            </div>
+        </div>
+        <div class="marker green">
+            <div class="cap"></div>
+            <div class="sleeve"></div>
+        </div>
+        <div class="marker blue">
+            <div class="cap"></div>
+            <div class="sleeve"></div>
+        </div>
         
     </div>
     
