--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -4,9 +4,23 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registration Form</title>
 </head>
 <body>
-    
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
+
+    <!-- there are two methods -->
+     <!-- GET which uses URL parameters or POST which is request through the body -->
+    <form action="https://register-demo.freecodecamp.org" method="post"></form>
+
+    <fieldset>
+        <label for="">Enter your First Name:</label>
+        <label for="">Enter your Last Name:</label>
+        <label for="">Enter your Email:</label>
+        <label for="">Create a New Password:</label>
+    </fieldset>
+    <fieldset></fieldset>
+    <fieldset></fieldset>
 </body>
 </html>
