--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -15,12 +15,18 @@
     <form action="https://register-demo.freecodecamp.org" method="post"></form>
 
     <fieldset>
-        <label for="">Enter your First Name:</label>
-        <label for="">Enter your Last Name:</label>
-        <label for="">Enter your Email:</label>
-        <label for="">Create a New Password:</label>
+        <label for="first-name">Enter Your First Name: <input required id="first-name" type="text"/></label>
+        <label for="last-name">Enter Your Last Name: <input required id="last-name" type="text"/></label>
+        <label for="email">Enter Your Email: <input required id="email" type="email"/></label>
+        <label for="new-password">Create a New Password: <input pattern="[a-z0-5]{8,}" required id="new-password" type="password"/></label>
+      </fieldset>
+
+    <fieldset>
+        <legend>Account type (required)</legend>
+        <label for="personal-account"> <input id="personal-account" checked name="account-type" type="radio"> Personal</label>
+        <label for="business-account"> <input id="business-account" name="account-type" type="radio"> Business</label>
     </fieldset>
     <fieldset></fieldset>
-    <fieldset></fieldset>
+    <input type="submit" value="submit">
 </body>
 </html>
