--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -15,18 +15,49 @@
     <form action="https://register-demo.freecodecamp.org" method="post"></form>
 
     <fieldset>
-        <label for="first-name">Enter Your First Name: <input required id="first-name" type="text"/></label>
-        <label for="last-name">Enter Your Last Name: <input required id="last-name" type="text"/></label>
-        <label for="email">Enter Your Email: <input required id="email" type="email"/></label>
-        <label for="new-password">Create a New Password: <input pattern="[a-z0-5]{8,}" required id="new-password" type="password"/></label>
+        <label for="first-name">Enter Your First Name: <input name="firstname" required id="first-name" type="text"/></label>
+        <label for="last-name">Enter Your Last Name: <input name="lastname" required id="last-name" type="text"/></label>
+        <label for="email">Enter Your Email: <input name="Email" required id="email" type="email"/></label>
+        <label for="new-password">Create a New Password: <input name="newpassword" pattern="[a-z0-5]{8,}" required id="new-password" type="password"/></label>
       </fieldset>
 
     <fieldset>
         <legend>Account type (required)</legend>
         <label for="personal-account"> <input id="personal-account" checked name="account-type" type="radio"> Personal</label>
-        <label for="business-account"> <input id="business-account" name="account-type" type="radio"> Business</label>
+        <label for="business-account"> <input id="business-account" name="account-type" type="radio"> Business
+        
+            <label for="terms-and-conditions"> 
+                <input id="terms-and-conditions" name="terms" required type="checkbox">
+                I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+            </label>
+
+        </label>
     </fieldset>
-    <fieldset></fieldset>
-    <input type="submit" value="submit">
+
+    <fieldset>
+        <label for="profile-picture"> Upload a profile picture:
+            <input name="profilepicture" id="profile-picture" type="file">
+        </label>
+
+        <label for="age">Input your age (years): 
+            <input name="Age" id="age" min="13" max="120" type="number">
+        </label>
+
+        <label for="referrer">How did you hear about us?
+            <select name="Referrer" id="referrer">
+                <option value="">(select one)</option>
+                <option value="1">freeCodeCamp News</option>
+                <option value="2">freeCodeCamp YouTube Channel</option>
+                <option value="3">freeCodeCamp Forum</option>
+                <option value="4">Other</option>
+            </select>
+        </label>
+
+        <label for="bio">Provide a bio:
+
+            <textarea placeholder="I like coding on the beach..." rows="3" cols="30" name="Bio" id="bio"></textarea>
+        </label>
+    </fieldset>
+    <input type="submit" name="submit" value="submit">
 </body>
 </html>
