--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -1,63 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
-
-    <!-- there are two methods -->
-     <!-- GET which uses URL parameters or POST which is request through the body -->
-    <form action="https://register-demo.freecodecamp.org" method="post"></form>
-
-    <fieldset>
-        <label for="first-name">Enter Your First Name: <input name="firstname" required id="first-name" type="text"/></label>
-        <label for="last-name">Enter Your Last Name: <input name="lastname" required id="last-name" type="text"/></label>
-        <label for="email">Enter Your Email: <input name="Email" required id="email" type="email"/></label>
-        <label for="new-password">Create a New Password: <input name="newpassword" pattern="[a-z0-5]{8,}" required id="new-password" type="password"/></label>
+    <form method="post" action='https://register-demo.freecodecamp.org'>
+      <fieldset>
+        <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required /></label>
+        <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
+        <label for="email">Enter Your Email: <input id="email" name="email" type="email" required /></label>
+        <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required /></label>
       </fieldset>
-
-    <fieldset>
+      <fieldset>
         <legend>Account type (required)</legend>
-        <label for="personal-account"> <input id="personal-account" checked name="account-type" type="radio"> Personal</label>
-        <label for="business-account"> <input id="business-account" name="account-type" type="radio"> Business
-        
-            <label for="terms-and-conditions"> 
-                <input id="terms-and-conditions" name="terms" required type="checkbox">
-                I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-            </label>
-
-        </label>
-    </fieldset>
-
-    <fieldset>
-        <label for="profile-picture"> Upload a profile picture:
-            <input name="profilepicture" id="profile-picture" type="file">
-        </label>
-
-        <label for="age">Input your age (years): 
-            <input name="Age" id="age" min="13" max="120" type="number">
-        </label>
-
+        <label for="personal-account"><input class="inline" id="personal-account" type="radio" name="account-type" checked /> Personal</label>
+        <label for="business-account"><input class="inline" id="business-account" type="radio" name="account-type" /> Business</label>
+      </fieldset>
+      <fieldset>
+        <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" name="file" /></label>
+        <label for="age">Input your age (years): <input id="age" type="number" name="age" min="13" max="120" /></label>
         <label for="referrer">How did you hear about us?
-            <select name="Referrer" id="referrer">
-                <option value="">(select one)</option>
-                <option value="1">freeCodeCamp News</option>
-                <option value="2">freeCodeCamp YouTube Channel</option>
-                <option value="3">freeCodeCamp Forum</option>
-                <option value="4">Other</option>
-            </select>
+          <select id="referrer" name="referrer">
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeCodeCamp Forum</option>
+            <option value="4">Other</option>
+          </select>
         </label>
-
         <label for="bio">Provide a bio:
-
-            <textarea placeholder="I like coding on the beach..." rows="3" cols="30" name="Bio" id="bio"></textarea>
+          <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
         </label>
-    </fieldset>
-    <input type="submit" name="submit" value="submit">
-</body>
+      </fieldset>
+      <label for="terms-and-conditions">
+        <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+      </label>
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
