finished the bones of the survey form now to make it pretty

--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -26,10 +26,10 @@
         <label for="referrer">How did you hear about us?
           <select id="referrer" name="referrer">
             <option value="">(select one)</option>
-            <option value="1">freeCodeCamp News</option>
-            <option value="2">freeCodeCamp YouTube Channel</option>
-            <option value="3">freeCodeCamp Forum</option>
-            <option value="4">Other</option>
+            <option value="news">freeCodeCamp News</option>
+            <option value="YouTube">freeCodeCamp YouTube Channel</option>
+            <option value="Forum">freeCodeCamp Forum</option>
+            <option value="other">Other</option>
           </select>
         </label>
         <label for="bio">Provide a bio:
