--- a/SurveyFormProject/index.html
+++ b/SurveyFormProject/index.html
@@ -12,10 +12,55 @@
     <p id="description">Thank you for taking the time to help use improve the platform</p>
 
     <form id="survey-form" method="post" action="">
-        <label id="name-label" for="name">Name<input required id="name" type="text" placeholder="Enter your name"></label>
-        <label id="email-label" for="email">Email<input required id="email" type="email" placeholder="Enter your email"></label>
-        <label id="number-label" for="number">Age (optional)<input required id="number" type="number" min="13" max="120" placeholder="Age"></label>
+        <label id="name-label" for="name">Name<br><input required id="name" type="text" placeholder="Enter your name"></label>
+        <label id="email-label" for="email">Email<br><input required id="email" type="email" placeholder="Enter your email"></label>
+        <label id="number-label" for="number">Age (optional)<br><input required id="number" type="number" min="13" max="120" placeholder="Age"></label>
+
+        <label for="dropdown">Which option best describes your current role?</label>
+    <select name="currentRole" id="currentRole">
+        <option value="">Select current role</option>
+        <option value="1">Student</option>
+        <option value="2">Full time job</option>
+        <option value="3">Full time learner</option>
+        <option value="4">Prefer not to say</option>
+        <option value="5">Other</option>
+    </select><br>
+
+    <legend>Would you Recommend freeCodeCamp to a friend?</legend>
+    <label for="definitely"><input value="6" type="radio" id="definitely" name="recommend"> Definitely</label>
+    <label for="Maybe"><input value="7" type="radio" id="Maybe" name="recommend"> Maybe</label>
+    <label for="NotSure"><input value="8" type="radio" id="NotSure" name="recommend"> Not Sure</label>
+
+    <label for="dropdown">What is your favorite feature of freeCodeCamp?</label>
+    <select name="favoriteFeature" id="dropdown">
+        <option value="">Select an option</option>
+        <option value="Challenges">Challenges</option>
+        <option value="Projects">Projects</option>
+        <option value="Community">Community</option>
+        <option value="openSource">Open Source</option>
+    </select><br>
+
+    <legend>What would you like to see improved? (check all that apply)</legend>
+    <label for="frontend"><input type="checkbox" value="Front-end">Front-end Projects</label>
+    <label for="frontend"><input type="checkbox" value="Back-end">Back-end Projects</label>
+    <label for="frontend"><input type="checkbox" value="Data">Data Visualization</label>
+    <label for="frontend"><input type="checkbox" value="Challenges">Challenges</label>
+    <label for="frontend"><input type="checkbox" value="Community">Open Source Community</label>
+    <label for="frontend"><input type="checkbox" value="Gitter">Gitter help rooms</label>
+    <label for="frontend"><input type="checkbox" value="Videos">Videos</label>
+    <label for="frontend"><input type="checkbox" value="Meetups">City Meetups</label>
+    <label for="frontend"><input type="checkbox" value="Wiki">Wiki</label>
+    <label for="frontend"><input type="checkbox" value="Forum">Forum</label>
+    <label for="frontend"><input type="checkbox" value="Additional">Additional Courses</label>
+
+    <legend>Any comments or suggestions?</legend>
+    <textarea name="comments" id="comments" placeholder="Enter your comment here..."></textarea><br>
+
+    <input type="submit" name="submit" id="submit">
+
     </form>
+
+    
     
 </body>
 </html>
